<resources>
    <string name="app_name">Fitness Friend</string>

    <!--These are the strings for the activity_setup.xml file-->
    <string name="welcome">Welcome to Fitness Friend</string>
    <string name="name_label">Name:</string>
    <string name="lbs_label">Weight (lbs):</string>
    <string name="age">Age</string>
    <string name="feet_label">Feet (ft):</string>
    <string name="inch_label">Inch (in):</string>
    <string name="activity_label">Activity: </string>
    <string name="finish_btn_label">Finish!</string>

    <!--These are the strings used for the spinner in the activity_setup.xml file-->
    <string-array name="activity_level_array">
        <item>Choose Activity Level:</item>
        <item>Lightly Active - exercise 1-3 times/week</item>
        <item>Moderately Active - exercise 3-5 times/week</item>
        <item>Very Active - exercise 6-7 times/week</item>
    </string-array>


    <!--These are the strings for the activity_add_exercise.xml file-->
    <string name="add_exercise_lbl">Add Exercise</string>
    <string name="exercise_name_lbl">Exercise Name:</string>
    <string name="calories_lbl">Calories:</string>
    <string name="duration_lbl">Duration:</string>
    <string name="log_exercise_btn_lbl">Log Exercise!</string>

    <!--These are the strings used for the spinner in the activity_add_exercise.xml file-->
    <string-array name="duration_array">
        <item>Unit:</item>
        <item>Second(s)</item>
        <item>Minute(s)</item>
        <item>Hour(s)</item>
    </string-array>


    <!--These are the strings used for the activity_add_food.xml file-->
    <string name="add_food_lbl">Add Food</string>
    <string name="food_name_lbl">Food Name:</string>
    <string name="quantity_lbl">Qty:</string>
    <string name="food_calories_lbl">Food Calories:</string>
    <string name="log_food_btn_lbl">Log Food!</string>


    <!--These are the labels for the activity_welcome.xml file-->
    <string name="welcome_back_lbl">Welcome (insert name)</string>
    <string name="calories_eaten_lbl">Calories Eaten Today: </string>
    <string name="calories_burnt_lbl">Calories Burnt Today: </string>
    <string name="exercises_logged_today_lbl">Exercises Logged Today: </string>
    <string name="food_logged_today_lbl">Food Logged Today:</string>


    <!--These are the labels for the buttons on the activity_welcome.xml file-->
    <string name="add_exercise_btn_lbl">Add Exercise</string>
    <string name="add_food_btn_lbl">Add Food</string>
    <string name="exercise_history_btn_lbl">Exercise History</string>
    <string name="food_history_btn_lbl">Food History</string>
    <string name="message_options_btn_lbl">Message Options</string>
    <string name="food_reminder_btn_lbl">Food Log Reminder</string>
    <string name="ex_reminder_btn_lbl">Exercise Log Reminder</string>


    <!--These are the labels for the activity_message_options.xml file-->
    <string name="food_reminder_lbl">Food Reminder</string>
    <string name="exercise_reminder_lbl">Exercise Reminder</string>
    <string name="set_time_btn_lbl">Select Time</string>
    <string name="set_date_btn_lbl">Select Date</string>
    <string name="text_message_radio_btn_lbl">Text Message</string>
    <string name="notification_message_radio_btn_lbl">Notification Message</string>
    <string name="notif_type_lbl">Notification Type</string>
    <string name="set_food_reminder_btn_lbl">Set Food Reminder!</string>
    <string name="set_ex_reminder_btn_lbl">Set Exercise Reminder!</string>
    <string name="date_selected">Date Selected: N/A</string>
    <string name="time_selected">Time Selected: N/A</string>


    <!--These are the utility strings that are used in application-->
    <string name="alphabet_input">"asdfghjklzxcvbnmqwertyuiopASDFGHJKLZXCVBNMQWERTYUIOP "</string>


</resources>
