<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bu.fitnessfriend.fitnessfriend.food_reminder"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/food_reminder_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_reminder_lbl"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/set_date_food_btn"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:text="@string/set_date_btn_lbl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/food_reminder_lbl"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/set_time_food_btn"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:text="@string/set_time_btn_lbl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/set_date_food_btn"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/notif_type_food_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notif_type_lbl"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/notif_type_food_radio_group"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp" />

    <RadioGroup
        android:id="@+id/notif_type_food_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/set_food_reminder_btn"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/food_time_lbl"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="47dp">

        <RadioButton
            android:id="@+id/txt_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_message_radio_btn_lbl" />

        <RadioButton
            android:id="@+id/notif_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_message_radio_btn_lbl" />
    </RadioGroup>

    <Button
        android:id="@+id/set_food_reminder_btn"
        android:layout_width="212dp"
        android:layout_height="71dp"
        android:layout_marginBottom="35dp"
        android:text="@string/set_food_reminder_btn_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/food_date_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_selected"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_date_food_btn"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/food_time_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/time_selected"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_time_food_btn"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
