<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercise_reminder_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bu.fitnessfriend.fitnessfriend.exercise.exercise_reminder">

    <TextView
        android:id="@+id/exercise_reminder_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/exercise_reminder_lbl"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/set_date_ex_btn"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:onClick="showDatePicker"
        android:text="@string/set_date_btn_lbl"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_reminder_lbl"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/set_time_ex_btn"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:onClick="showTimePicker"
        android:text="@string/set_time_btn_lbl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_date_ex_btn"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.502" />

    <RadioGroup
        android:id="@+id/notif_type_ex_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:id="@+id/txt_ex_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="selectReminder"
            android:text="@string/text_message_radio_btn_lbl" />

        <RadioButton
            android:id="@+id/notif_ex_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="selectReminder"
            android:text="@string/notification_message_radio_btn_lbl" />
    </RadioGroup>

    <TextView
        android:id="@+id/notif_ex_type_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notif_type_lbl"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/notif_type_ex_radio_group" />

    <Button
        android:id="@+id/set_ex_reminder_btn"
        android:layout_width="212dp"
        android:layout_height="71dp"
        android:layout_marginBottom="36dp"
        android:onClick="setExerciseReminder"
        android:text="@string/set_ex_reminder_btn_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/ex_date_lbl"
        android:layout_width="334dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/date_selected"
        android:textSize="21sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/set_time_ex_btn"
        app:layout_constraintHorizontal_bias="0.764" />

    <TextView
        android:id="@+id/ex_time_lbl"
        android:layout_width="337dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/time_selected"
        android:textSize="21sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/ex_date_lbl"
        app:layout_constraintHorizontal_bias="0.903" />
</android.support.constraint.ConstraintLayout>
